 * Fix reading columns with non-UTF names from schema (CASSANDRA-14468)
 * Fix potential IndexOutOfBoundsException with counters (CASSANDRA-14167)
 * Restore resumable hints delivery, backport CASSANDRA-11960 (CASSANDRA-14419)
 * Create MessagingService mocking classes (CASSANDRA-12016)
Merged from 2.2:
 * Update release checksum algorithms to SHA-256, SHA-512 (CASSANDRA-14970)
 * Don't enable client transports when bootstrap is pending (CASSANDRA-14525)
 * MigrationManager attempts to pull schema from different major version nodes (CASSANDRA-14928)
 * Fix incorrect cqlsh results when selecting same columns multiple times (CASSANDRA-13262)
 * Returns null instead of NaN or Infinity in JSON strings (CASSANDRA-14377)
 * Don't skip entire sstables when reading backwards with mixed clustering column order (CASSANDRA-14910)
 * Cannot perform slice reads in reverse direction against tables with clustering columns in mixed order (CASSANDRA-14899)

3.0.17.15
* <rdar://problem/49484414> (CASSANDRA-15072) Incomplete range results during 2.X -> 3.11.4 upgrade
* <rdar://problem/49120367> (CASSANDRA-15059) Gossiper#markAlive can race with Gossiper#markDead
* (no radar) PR #1249 drop root capabilities before running tests and reenable FQL tests
* <rdar://problem/48670257> (CASSANDRA-15045) Fix index summary redistribution compaction cancellation issues
* <rdar://problem/49900065> (CASSANDRA-15089) CassandraNetworkAuthorizer::authorize should get role details from Roles, not directly from IRoleManager
* <rdar://problem/49938329> (CASSANDRA-15086) Illegal column names make legacy sstables unreadable in 3.0/3.x
* <rdar://problem/44970349> (CASSANDRA-14802) CalculatePendingRanges assigns more pending ranges than necessary
* <rdar://problem/49271378> (Apple Internal) Skip FullQueryLogger tests that fail when running as root
* <rdar://problem/49755710> (Apple Internal) Add rio docker image release when we release cie-cassandra every time