@@ -14,6 +14,7 @@
  * Restore resumable hints delivery, backport CASSANDRA-11960 (CASSANDRA-14419)
  * Create MessagingService mocking classes (CASSANDRA-12016)
 Merged from 2.2:
+ * Paged Range Slice queries with DISTINCT can drop rows from results (CASSANDRA-14956)
  * Update release checksum algorithms to SHA-256, SHA-512 (CASSANDRA-14970)
  * Don't enable client transports when bootstrap is pending (CASSANDRA-14525)
  * MigrationManager attempts to pull schema from different major version nodes (CASSANDRA-14928)
